include/render/renderer.h

/**
 * @file renderer.h
 * @brief C ABI for the oakrender display renderer (olive::Renderer) —
 *        renderer/texture/frame/blit families plus backend management.
 *
 * Signatures follow the R7-A display.h rewrite
 * (docs/zh/plans/completed/r7-pure-abi-plan.md §A.2) with the
 * oakrender_ prefix (M7 §2.1).
 *
 * Ownership protocol: every public handle is a by-value
 * reference-counted struct (see oakcommon's common/handle.h; shared_ptr
 * semantics). init/create functions return a handle with reference
 * count 1, handle.addref(handle.ctx) takes another reference, and
 * handle.release(handle.ctx) (or the oakrender_*_free() convenience
 * wrappers, which also null the caller's ctx) drops one; the object is
 * destroyed in this library when the count reaches zero. Empty handles
 * (ctx == NULL) are accepted by every function and yield a no-op / zero
 * result / OAKRENDER_E_INVALID.
 *
 * Cross-thread handoff (§A.3): the producing side addrefs before
 * publishing a handle into a shared slot; the consuming side releases
 * the handle it replaced. The side holding the slot when it is torn
 * down releases the remaining handle.
 *
 * Handles:
 *   - OakRenderRenderer wraps a native olive::Renderer.
 *   - OakRenderTexture / OakCodecFrame box shared_ptr-managed engine
 *     objects.
 *   - `gl_context` is an opaque borrowed olive::OpenGLContext* (or NULL
 *     to let the backend create its own offscreen surface).
 */

/**
 * @brief POD mirror of olive::VideoParams' user-facing fields.
 *
 * Same layout and field semantics as oak_video_params
 * (engine/include/oakengine/videoparams.h): `time_base_*` is the frame
 * duration (frame rate flipped), `format` an olive::PixelFormat::Format
 * value, `interlacing` an olive::VideoParams::Interlacing value,
 * `color_range` an olive::VideoParams::ColorRange value. The video
 * channel count is an engine-internal constant and not exposed.
 */
typedef struct oakrender_video_params {
	int width;
	int height;
	int time_base_num; /**< Frame duration numerator (e.g. 1001/30000 s). */
	int time_base_den;
	int format; /**< olive::PixelFormat::Format. */
	int pixel_aspect_num;
	int pixel_aspect_den;
	int interlacing; /**< olive::VideoParams::Interlacing. */
	int color_range; /**< olive::VideoParams::ColorRange. */
	int divider; /**< Preview resolution divider (1 = full). */
	int video_type; /**< olive::VideoParams::Type (0 = video). */
	int premultiplied_alpha; /**< 0/1. */
} oakrender_video_params;
/**
 * @brief Reference-counted handle to a display renderer
 * (olive::Renderer). See the file-level ownership protocol.
 */
typedef struct OakRenderRenderer {
	void *ctx; /**< Opaque pointer to the reference-counted object. */
	void (*addref)(void *ctx); /**< Atomically increments the count. */
	void (*release)(void *ctx); /**< Decrements the count, destroys at 0. */
	uint32_t abi_version; /**< OAKRENDER_ABI_VERSION. */
} OakRenderRenderer;
/**
 * @brief Reference-counted handle to a CPU frame (an olive::FramePtr
 * boxed in a control block). Declared here so the cache family
 * (render/cache.h) can use the same type; the frame functions live in
 * this header.
 * Named OakCodecFrame per the M7 §2.2 contract; the oakcodec wave (M5)
 * adopts the same handle.
 */
typedef struct OakCodecFrame {
	void *ctx; /**< Opaque pointer to the reference-counted object. */
	void (*addref)(void *ctx); /**< Atomically increments the count. */
	void (*release)(void *ctx); /**< Decrements the count, destroys at 0. */
	uint32_t abi_version; /**< OAKRENDER_ABI_VERSION. */
} OakCodecFrame;
/* ---- Renderer lifecycle -------------------------------------------------- */

/**
 * @brief Create a renderer on the named dynamic backend ("opengl",
 * "vulkan"; olive::DynamicRenderer). Loads the backend shared library;
 * falls back per DynamicRenderer rules.
 *
 * @return Renderer handle with reference count 1; ctx is NULL on
 *         NULL/empty backend id, load failure, or allocation failure.
 */
OakRenderRenderer oakrender_display_renderer_create_dynamic(
	const char *backend_id);
/**
 * @brief Create an OpenGL renderer (olive::OpenGLRenderer). The renderer
 * is not initialized; call oakrender_display_renderer_init() before use.
 *
 * @return Renderer handle with reference count 1; ctx is NULL on
 *         allocation failure.
 */
OakRenderRenderer oakrender_display_renderer_create_opengl(void);
/**
 * @brief Initialize a renderer. `gl_context` is a borrowed opaque
 * olive::OpenGLContext*, or NULL to use the backend's default
 * device/context path (Renderer::init()).
 *
 * @return OAKRENDER_OK, OAKRENDER_E_INVALID (empty renderer), or
 *         OAKRENDER_E_FAILED (backend init failed).
 */
int oakrender_display_renderer_init(OakRenderRenderer renderer,
									void *gl_context);
/**
 * @brief Release one reference to a renderer (the final release runs
 * Renderer::destroy() + delete). Convenience wrapper around
 * renderer->release(renderer->ctx): NULL / empty-handle no-op; clears
 * renderer->ctx after releasing.
 */
void oakrender_display_renderer_destroy(OakRenderRenderer *renderer);
/* ---- Renderer queries ---------------------------------------------------- */

/** @brief 1 when the renderer is OpenGL-based, 0 otherwise / empty. */
int oakrender_display_renderer_is_open_gl(OakRenderRenderer renderer);
/** @brief 1 when the renderer is Vulkan-based, 0 otherwise / empty. */
int oakrender_display_renderer_is_vulkan(OakRenderRenderer renderer);
/* ---- Frame handle -------------------------------------------------------- */

/** @brief Create an empty CPU frame. Returns a handle with count 1. */
OakCodecFrame oakrender_codec_frame_create(void);
/**
 * @brief Take another reference to a frame and return the same handle.
 * Empty in yields empty out (see oakrender_display_texture_retain()).
 */
OakCodecFrame oakrender_codec_frame_retain(OakCodecFrame frame);
/**
 * @brief Release one reference to a frame. Convenience wrapper around
 * frame->release(frame->ctx). NULL / empty-handle no-op; clears
 * frame->ctx after releasing.
 */
void oakrender_codec_frame_free(OakCodecFrame *frame);
int oakrender_codec_frame_get_params(OakCodecFrame frame,
									 oakrender_video_params *out);
/** @brief Borrowed pixel data pointer (valid until the final release). */
void *oakrender_codec_frame_data(OakCodecFrame frame);
/** @brief Borrowed const pixel data pointer. */
const void *oakrender_codec_frame_const_data(OakCodecFrame frame);
/** @brief Line stride in bytes. */
int oakrender_codec_frame_linesize_bytes(OakCodecFrame frame);
/** @brief 1 when the pixel buffer is allocated, 0 otherwise / empty. */
int oakrender_codec_frame_is_allocated(OakCodecFrame frame);