include/render/color.h

typedef struct OakColorProcessor OakColorProcessor;
/**
 * @brief Create a colorspace-to-colorspace processor on the default
 * OCIO config.
 *
 * @param src_space Source colorspace name (role names are resolved).
 * @param dst_transform Destination colorspace / output transform name.
 * @param direction OAKRENDER_COLOR_DIRECTION_NORMAL (src -> dst) or
 *        OAKRENDER_COLOR_DIRECTION_INVERSE (dst -> src).
 *
 * OCIO failures are non-fatal (matching the C++ behavior): the handle is
 * still returned but oakrender_color_processor_is_valid() reports 0 and
 * conversions are pass-through.
 *
 * @return Processor handle, or NULL for NULL/empty strings, an unknown
 *         direction, no default config, or allocation failure.
 */
OakColorProcessor *oakrender_color_processor_create(const char *src_space,
													const char *dst_transform,
													int direction);
/** @brief Release a processor handle. NULL-safe no-op. */
void oakrender_color_processor_free(OakColorProcessor *processor);
/**
 * @brief 1 when the processor holds a valid OCIO processor
 * (ColorProcessor::get_processor() != null), 0 otherwise / on NULL.
 */
int oakrender_color_processor_is_valid(const OakColorProcessor *processor);
/**
 * @brief Convert a single RGBA color (ColorProcessor::convert_color()).
 * On an invalid processor the input is copied through.
 *
 * @return OAKRENDER_OK, or OAKRENDER_E_INVALID for NULL arguments.
 */
int oakrender_color_processor_convert(OakColorProcessor *processor,
									  double ir, double ig, double ib,
									  double ia, double *out_r, double *out_g,
									  double *out_b, double *out_a);
/* ---- ColorManager statics ------------------------------------------------- */

/**
 * @brief (Re)build the process-wide default OCIO config
 * (ColorManager::set_up_default_config()).
 *
 * @return OAKRENDER_OK, or OAKRENDER_E_FAILED when no config could be
 *         created.
 */
int oakrender_color_manager_set_up_default_config(void);
/**
 * @brief Describe the active default config: the $OCIO path when set,
 * otherwise the extracted default config's path. Two-stage string
 * getter: returns the required buffer size including NUL; pass
 * buf == NULL or too small a buffer to query the size.
 *
 * @return Required size (non-negative), or OAKRENDER_E_STATE when no
 *         default config exists.
 */
int oakrender_color_manager_get_config(char *buf, int n);